# weather-be

./: Cargo.toml
src/: main.rs
src/graphql/: mod.rs
src/graphql/weather/: service.rs
