[package]
name = "weather-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.11"
async-graphql-poem = "6.0.11"
poem = "1.3.59"
tokio = { version = "1.4.0", features = ["full"] }
